# spirit

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  LICENSE.txt  README.md  REFERENCE.md  before.txt  build_nvc++.sh  build_python.sh  clean.sh  clean_log.sh  clean_output.sh  cmake.sh  conf.py  ctest.sh  index.rst  install.sh  make.sh  pyproject.toml  test.sh  verify_mc_cuda.py
VFRendering/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  data.txt  demo.py  setup.py  webdemo.cxx  webdemo.html
VFRendering/include/: VectorfieldIsosurface.hxx
VFRendering/python/: pybind11_glm.hpp  vfrendering_bindings.cpp
VFRendering/src/: ArrowRenderer.cxx  BoundingBoxRenderer.cxx  CombinedRenderer.cxx  CoordinateSystemRenderer.cxx  DotRenderer.cxx  FPSCounter.cxx  Geometry.cxx  GlyphRenderer.cxx  IsosurfaceRenderer.cxx  Options.cxx  ParallelepipedRenderer.cxx  RendererBase.cxx  SphereRenderer.cxx  SurfaceRenderer.cxx  Utilities.cxx  VectorSphereRenderer.cxx  VectorfieldIsosurface.cxx  View.cxx
core/: .gitignore  CMakeLists.txt  README.md
core/CMake/: CompilerFlags.cmake  FindFFTW.cmake  FindTBB.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  GetQHull.cmake  Spirit_Defines.h.in  Spirit_Version.h.in  Spirit_Version.hpp.in  __init__.py.in
core/docs/: API.md  API_Python.md  BUILD.md  C_API.md  Definitions.md  Features.md  Hamiltonian.md  INPUT.md  Input.md  Python_API.md  README.md
core/include/: CMakeLists.txt
core/python/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
core/src/: CMakeLists.txt
core/test/: main.cpp  matchers.hpp  test.cpp  test_aggregation.cpp  test_anisotropy.cpp  test_api.cpp  test_configparser.cpp  test_ema.cpp  test_io.cpp  test_manifoldmath.cpp  test_optimizers.cpp  test_physics.cpp  test_pinning.cpp  test_solvers.cpp  test_vectormath.cpp  utility.hpp
gl/: CMakeLists.txt  README.md
gl/include/: ArrowSpinRenderer.h  ArrowSpinRenderer.hpp  BoundingBoxRenderer.h  BoundingBoxRenderer.hpp  CMakeLists.txt  Camera.h  CombinedSpinRenderer.h  CombinedSpinRenderer.hpp  CoordinateSystemRenderer.h  CoordinateSystemRenderer.hpp  GLSpins.h  GLSpins.hpp  Geometry.h  ISpinRenderer.h  ISpinRenderer.hpp  IsosurfaceSpinRenderer.hpp  SphereSpinRenderer.h  SphereSpinRenderer.hpp  SurfaceSpinRenderer.h  SurfaceSpinRenderer.hpp  VectorfieldIsosurface.hpp  gl_spins.h  load_shader.h  options.h  options.hpp  utilities.h
gl/shaders/: arrows.vert.glsl  boundingbox.frag.glsl  boundingbox.vert.glsl  colormap.bluegreenred.glsl  colormap.bluered.glsl  colormap.bluewhitered.glsl  colormap.hsv.glsl  colormap.hsv.noz.glsl  colormap.redblue.glsl  colormap.redgreenblue.glsl  colormap.redwhiteblue.glsl  coordinatesystem.frag.glsl  coordinatesystem.vert.glsl  fragment.shader  fragment.sphere_background.shader  fragment.txt  shader.cmake  shader.in  sphere_points.frag.glsl  sphere_points.vert.glsl  surface.frag.glsl  vertex.shader  vertex.sphere_background.shader  vertex.surface.shader  vertex.txt
gl/src/: ArrowSpinRenderer.cpp  BoundingBoxRenderer.cpp  CMakeLists.txt  Camera.cpp  CombinedSpinRenderer.cpp  CoordinateSystemRenderer.cpp  GLSpins.cpp  Geometry.cpp  IsosurfaceSpinRenderer.cpp  SphereSpinRenderer.cpp  SurfaceSpinRenderer.cpp  VectorfieldIsosurface.cpp  gl_spins.cpp  load_shader.cpp  utilities.cpp
ui-console/: CMakeLists.txt  README.md  main.cpp
ui-console/include/: Handle_Signal.hpp  Signal.h  Threading.h  Threading.hpp
ui-console/src/: Handle_Signal.cpp  Signal.cpp
ui-cpp/: CMakeLists.txt  QtTest.icns  README.md  main.cpp  main_web.cpp  resources.qrc
ui-cpp/CMake/: CMakeRC.cmake
ui-cpp/include/: CMakeLists.txt  ConfigurationsWidget.hpp  ControlWidget.hpp  GeometryWidget.hpp  HamiltonianGaussianWidget.hpp  HamiltonianHeisenbergPairsWidget.hpp  HamiltonianHeisenbergWidget.hpp  HamiltonianMicromagneticWidget.hpp  InfoWidget.hpp  IsosurfaceWidget.hpp  MainWindow.hpp  MouseDecoratorWidget.hpp  ParametersWidget.hpp  PlotWidget.hpp  PlotsWidget.hpp  SettingsWidget.hpp  SpinWidget.hpp  VisualisationSettingsWidget.hpp
ui-cpp/res/: AppIcon.icns  windows_metafile.rc.in
ui-cpp/src/: CMakeLists.txt  ConfigurationsWidget.cpp  ControlWidget.cpp  DebugWidget.cpp  GeometryWidget.cpp  HamiltonianGaussianWidget.cpp  HamiltonianHeisenbergNeighboursWidget.cpp  HamiltonianHeisenbergPairsWidget.cpp  HamiltonianHeisenbergWidget.cpp  HamiltonianMicromagneticWidget.cpp  InfoWidget.cpp  IsosurfaceWidget.cpp  MainWindow.cpp  ParametersWidget.cpp  PlotWidget.cpp  PlotsWidget.cpp  SettingsWidget.cpp  SpinWidget.cpp  VisualisationSettingsWidget.cpp
ui-cpp/ui/: CMakeLists.txt  ConfigurationsWidget.ui  ControlWidget.ui  HamiltonianHeisenbergWidget.ui  HamiltonianMicromagneticWidget.ui  InfoWidget.ui  MainWindow.ui  ParametersWidget.ui  PlotsWidget.ui  VisualisationSettingsWidget.ui
ui-cpp/ui-qt/: resources.qrc
ui-cpp/utility/: CMakeLists.txt  Chai_Bootstrap.cpp  Chai_Bootstrap.hpp  CommandLineParser.hpp  Handle_Signal.cpp  Handle_Signal.hpp
ui-nanogui/: CMakeLists.txt  main.cpp
ui-nanogui/include/: AdvancedGraph.hpp  ConfigurationsWindow.hpp  EnergyGraph.hpp  GLCanvas.hpp  ListSelect.hpp  ListWindow.hpp  MainWindowLayout.hpp  MethodWidget.hpp  VisualisationWidget.hpp
ui-nanogui/src/: AdvancedGraph.cpp  CMakeLists.txt  EnergyGraph.cpp  MethodWidget.cpp
ui-qt/: CMakeLists.txt  README.md  main.cpp  resources.qrc
ui-qt/include/: CMakeLists.txt  ConfigurationsWidget.hpp  ControlWidget.hpp  DebugWidget.h  DebugWidget.hpp  GeometryWidget.hpp  HamiltonianAnisotropicWidget.hpp  HamiltonianGaussianWidget.hpp  HamiltonianHeisenbergNeighboursWidget.hpp  HamiltonianHeisenbergPairsWidget.hpp  HamiltonianIsotropicWidget.hpp  InputHandler.h  InputParser.hpp  IsosurfaceWidget.hpp  MainWindow.h  MainWindow.hpp  MouseDecoratorWidget.hpp  ParametersWidget.hpp  PlotWidget.h  PlotWidget.hpp  PlotsWidget.h  SettingsWidget.h  (+5 more)
ui-web/: CMakeLists.txt  README.md  index.html  main_js.cxx  simulation.js  web.html  webglspins.min.js
(+890 files in other folders)
